@@ -1,11 +1,13 @@
-ganv (1.4.3) unstable;
+ganv (1.5.0) unstable;
 
   * Fix positioning of embedded widgets when changing layout.
   * Fix unexpected node jumping when dragging new connections.
+  * Add support for PDF and PS export.
+  * Improve text rendering at high zoom.
   * Fix compilation with --no-fdgl (patch from Vlad Glagolev).
   * Fix crash when destroying canvas.
 
- -- David Robillard <d@drobilla.net>  Thu, 05 Feb 2015 18:32:13 -0500
+ -- David Robillard <d@drobilla.net>  Sun, 08 Feb 2015 08:32:08 -0500
 
 ganv (1.4.2) stable;
 
